Ajout de la fonction de comptage de bobs + suite fix css différentes pages

--- a/mobile/src/app/components/evenement/evenement.component.html
+++ b/mobile/src/app/components/evenement/evenement.component.html
@@ -40,7 +40,7 @@
 
       <ion-card class="flex-item">
         <ion-card-header>
-          <ion-card-title id="nbrBob">{{ event?.nbrBob }}</ion-card-title>
+          <ion-card-title id="nbrBob">{{ nbrBobs }}</ion-card-title>
         </ion-card-header>
         <ion-card-content>Bobs</ion-card-content>
       </ion-card>
