--- a/mobile/src/app/components/menu/menu/menu.component.html
+++ b/mobile/src/app/components/menu/menu/menu.component.html
@@ -13,20 +13,14 @@
       <ion-item>
        
         <ion-button expand="full" color="primary" [routerLink]="['/rejoindre']">
-          <ion-label color="dark">Rejoindre</ion-label>
+          <ion-label color="dark">Rejoindre un événement</ion-label>
         </ion-button>
 
-      </ion-item>
-      
-      <ion-item>
-        <ion-button expand="full" color="primary">
-          <ion-label color="dark">Réglages</ion-label>
-        </ion-button>
       </ion-item>
 
       <ion-item>
         <ion-button menuToggle expand="full" color="primary" [routerLink]="['/tabs/tab5']">
-          <ion-label color="dark">Anciens Évènements</ion-label>
+          <ion-label color="dark">Anciens événements</ion-label>
         </ion-button>
       </ion-item>
 
