--- a/mobile/src/app/tab3/tab3.page.html
+++ b/mobile/src/app/tab3/tab3.page.html
@@ -36,7 +36,7 @@
       </a>
     </ion-card-content>
   
-    <ion-card-content class="horizontal-align">
+    <ion-card-content>
       <a href="https://www.facebook.com/search/people/?q={{profil?.facebook}}" target="_blank" class="horizontal-align">
         <ion-icon name="logo-facebook" size="large"></ion-icon>
          <label>{{profil?.facebook}}</label>
