--- a/mobile/src/app/components/evenement/evenement.component.scss
+++ b/mobile/src/app/components/evenement/evenement.component.scss
@@ -150,3 +150,14 @@ ion-back-button {
   color: black;
   margin-right: 20px;
 }
+
+#takeBedButtonContainer {
+  justify-content: center; 
+}
+
+#takeBedButton {
+  width: 350px;
+  margin-top: -28px;
+  color: black;
+  font-weight: bold;
+}
