--- a/mobile/src/app/components/rejoindre-event/rejoindre-event.component.html
+++ b/mobile/src/app/components/rejoindre-event/rejoindre-event.component.html
@@ -22,7 +22,7 @@
       </ion-item>
     </ion-list>
     <br>
-    <ion-button id="rejoindreButton" color="primary" (click)="verifications()">Rejoindre l'événement</ion-button>
+    <ion-button class="rejoindreButton" (click)="verifications()">Rejoindre l'événement</ion-button>
   </div>
   <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   
@@ -53,7 +53,7 @@
       </ion-card>
     </ion-list>
   
-    <ion-button id="rejoindreButton" color="primary" (click)="rejoindreEvent()">Rejoindre l'événement</ion-button>
+    <ion-button class="rejoindreButton" (click)="rejoindreEvent()">Rejoindre l'événement</ion-button>
   </div>
 
 
