--- a/mobile/src/app/pages/login/login.page.html
+++ b/mobile/src/app/pages/login/login.page.html
@@ -30,17 +30,17 @@
             </div>
             <br>
             <div padding>
-              <ion-button color="primary" id="loginButton" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+              <ion-button id="loginButton" type="submit" [disabled]="form.invalid" expand="block">Se connecter</ion-button>
             </div>
           </ion-col>
         </ion-row>
         <br>
         <ion-row>
           <div text-center id="register">
-          Vous n'avez pas encore de compte ? Inscrivez-vous <a routerLink='/register'>
-          par ici</a>
+          Vous n'avez pas de compte ? <a routerLink='/register'>Inscrivez-vous</a>
           </div>
         </ion-row>
+        <br>
       </ion-grid>
     </form>
     
