--- a/mobile/src/app/pages/register/register.page.html
+++ b/mobile/src/app/pages/register/register.page.html
@@ -70,15 +70,14 @@
             </div>
             <br>
             <div padding>
-              <ion-button color="primary" id="registerButton" type="submit" [disabled]="form.invalid" expand="block">Register</ion-button>
+              <ion-button  id="registerButton" type="submit" [disabled]="form.invalid" expand="block">Créer mon compte</ion-button>
             </div>
           </ion-col>
         </ion-row>
         <br>
         <ion-row>
           <div text-center id="login">
-          Vous avez déjà un compte ? Connectez vous <a routerLink='/login'>
-          par ici</a>
+          Vous avez déjà un compte ? <a routerLink='/login'>Connectez vous</a>
           </div>
         </ion-row>
         <br>
