--- a/mobile/src/app/components/rejoindre-event/rejoindre-event.component.scss
+++ b/mobile/src/app/components/rejoindre-event/rejoindre-event.component.scss
@@ -118,9 +118,10 @@ ion-back-button {
   margin-right: -80px;
 }
 
-#rejoindreButton {
+.rejoindreButton {
   width: 90%;
   height: auto;
   margin-left: 5%;
+  color: black;
 }
 
