--- a/mobile/src/app/components/popover/popover.component.scss
+++ b/mobile/src/app/components/popover/popover.component.scss
@@ -13,3 +13,10 @@ ion-item {
     background-color: #ffbf00;
     color: black;
 }
+
+.contributionsButton {
+    width: 90%;
+    height: auto;
+    margin-left: 5%;
+    color: black;
+}
