--- a/mobile/src/app/tab2/tab2.page.html
+++ b/mobile/src/app/tab2/tab2.page.html
@@ -60,15 +60,18 @@
     </ion-input>
   </ion-item>
 
-  <ion-button (click)="openPopover($event)" class="custom-popover" class="popover-top">Contributions</ion-button>
-  
+  <br>
+  <ion-button id="contributionsButton" (click)="openPopover($event)">Ajouter des contributions</ion-button>
+  <br>
+
   <ion-list class="aliment" *ngIf="showContrib">
     <ion-label>
       <h2 class="contributions-title">Contributions</h2>
+      <br>
     </ion-label>
     <ion-item-sliding *ngFor="let item of selectedContributionsMap">
       <ion-item class="custom-contribution-item">
-        <ion-label>{{ item.nom }} - {{ item.prix }}€</ion-label>
+        <ion-label>{{ item.nom }}</ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="removeContribution(item)" class="custom-contribution-item">
