Fix contribution pour user admin pour être présent dans l'event quand plus de contributions

--- a/mobile/src/app/pages/register/register.page.html
+++ b/mobile/src/app/pages/register/register.page.html
@@ -64,9 +64,9 @@
                 <ion-input label="Description" labelPlacement="floating" name="description" type="text" placeholder="Votre description" ngModel></ion-input>
               </ion-item>
 
-              <ion-item>
+              <!-- <ion-item>
                 <ion-input label="Photo de profil" labelPlacement="floating" type="file" accept="image/*" capture="environment" #profilePicInput></ion-input>
-              </ion-item>
+              </ion-item> -->
             </div>
             <br>
             <div padding>
